fixed the issue with header alignment and logo routing

--- a/diplom/src/components/header.css
+++ b/diplom/src/components/header.css
@@ -7,6 +7,8 @@
     font-style: normal;
     font-weight: bold;
     margin-left: 11px;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .header__container-logo {
@@ -15,11 +17,6 @@
     padding-right: 100px;
 }
 
-.wrap {
-    position: absolute;
-}
-
-.basket__image {
-    height: 20px;
-    position: absolute;
+.header__logo {
+    margin: 0 10px;
 }
